# hcl-dialect

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  THIRD-PARTY-LICENSES  setup.sh
.circleci/: config.yml  task_format.sh
cmake/: FindGMP.cmake  OpenScop.cmake
docker/: build.sh  demo.dockerfile  push.sh
examples/: Makefile  build.py  run_base.tcl  test_ast.py  test_codegen.py  test_for_loops.py  test_lambda.py
hcl-opt/: hcl-opt.cpp
hcl-translate/: CMakeLists.txt  hcl-translate.cpp
include/hcl-c/: HCL.h  (+1 more)
lib/: CMakeLists.txt
lib/Bindings/Python/: HCLAttributes.cpp  HCLModule.cpp  HCLTypes.cpp  hcl_main.py
lib/CAPI/: CMakeLists.txt  EmitHLSCpp.cpp
lib/CAPI/Dialect/: CMakeLists.txt  Dialects.cpp  HCLAttributes.cpp  HCLTypes.cpp  Registration.cpp  hcl.cpp
lib/CAPI/SharedLib/: CMakeLists.txt  HCLRuntimeUtils.cpp
lib/CAPI/Translation/: CMakeLists.txt  EmitHLSCpp.cpp  EmitIntelHLS.cpp  EmitVivadoHLS.cpp
lib/Conversion/: CMakeLists.txt  FixedPointToInteger.cpp  HCLToLLVM.cpp  HCLToNVVM.cpp  LowerBitOps.cpp  LowerCompositeType.cpp  LowerPrintOps.cpp  NVVMToCubin.cpp  Passes.cpp
lib/Dialect/: CMakeLists.txt  HeteroCLDialect.cpp  HeteroCLOps.cpp
lib/Dialect/TransformOps/: CMakeLists.txt  HCLTransformOps.cpp
lib/Support/: CMakeLists.txt  LoopFusionUtils.cpp  OslScop.cpp  OslScopStmtOpSet.cpp  OslSymbolTable.cpp  ScatteringUtils.cpp  ScopStmt.cpp  ScopUtils.cpp  Utils.cpp
lib/Transforms/: AnyWidthInteger.cpp  CMakeLists.txt  DataPlacement.cpp  FixedPointToInteger.cpp  FloatingPointToInteger.cpp  FoldBitWidth.cpp  HostDeviceSeparation.cpp  HostXcelSeparation.cpp  LegalizeCast.cpp  LoopTransformation.cpp  LoopTransformations.cpp  LowerBitOps.cpp  LowerCompositeType.cpp  LowerPrint.cpp  LowerToLLVM.cpp  MemRefDCE.cpp  MoveReturnToInput.cpp  PassDetail.h  Passes.cpp  ReconcileUnrealizedCasts.cpp  RemoveStrideMap.cpp  TransformInterpreter.cpp  UnifyKernels.cpp
lib/Transforms/LoopTransformations/: CMakeLists.txt  LoopTransformations.cpp
lib/Transforms/ReconcileUnrealizedCasts/: CMakeLists.txt  ReconcileUnrealizedCasts.cpp
lib/Translation/: CMakeLists.txt  EmitHLSCpp.cpp  EmitIntelHLS.cpp  EmitMlirGpu.cpp  EmitVivadoHLS.cpp  Utils.cpp
lib/hcl/: CMakeLists.txt  HeteroCLDialect.cpp  HeteroCLOps.cpp
lib/passes/: CMakeLists.txt  loop_reorder.cpp  loop_tiling.cpp  loop_transformation.cpp
scripts/: add_license_header.py  check_license_header.py  git-clang-format.sh
standalone-opt/: standalone-opt.cpp
test/: CMakeLists.txt  gemm.mlir  lit.cfg.py  test.mlir  types.mlir
tools/: CMakeLists.txt
tools/hcl-opt/: CMakeLists.txt  hcl-opt.cpp
tools/hcl-translate/: CMakeLists.txt  hcl-translate.cpp
(+199 files in other folders)
